Fix some small issues

--- a/src/locales/en/messages.po
+++ b/src/locales/en/messages.po
@@ -47,7 +47,7 @@ msgid "Alphabetical"
 msgstr ""
 
 #: src/features/snap/components/MetadataModal.tsx
-msgid "Audited"
+msgid "Audit"
 msgstr ""
 
 #: src/components/InstallUnsupportedMobile.tsx
