--- a/src/locales/en-US/messages.po
+++ b/src/locales/en-US/messages.po
@@ -43,6 +43,10 @@ msgstr ""
 
 #: src/constants.ts
 msgid "Account Management"
+msgstr "<<<<<<< HEAD"
+
+#: src/components/FooterAccountManagementTerms.tsx
+msgid "Account Management Snaps are released as part of an experimental beta release. You agree that you will only use one of these Snaps if you understand how it functions and how to use it, and you have fully read and understand all risk warnings and other disclosures made available by the Third Party Service provider relating to use of their Snap. You agree that Consensys is not responsible for any injury that you incur as a result of your use of this Snap."
 msgstr ""
 
 #: src/components/icons/index.ts
@@ -305,10 +309,14 @@ msgstr ""
 
 #: src/components/icons/index.ts
 msgid "Enable light mode"
-msgstr ""
+msgstr "<<<<<<< HEAD"
 
 #: src/components/icons/index.ts
 msgid "Ethereum"
+msgstr ""
+
+#: src/components/FooterAccountManagementTerms.tsx
+msgid "Experimental Beta"
 msgstr ""
 
 #: src/components/icons/index.ts
@@ -776,4 +784,8 @@ msgstr ""
 
 #: src/components/FooterTerms.tsx
 msgid "You acknowledge that any Snap that you install is a Third Party Service, unless otherwise identified, as defined in the <0>Consensys Terms of Use</0>. Your use of Third Party Services is governed by separate terms and conditions set forth by the Third Party Service provider. Consensys does not recommend the use of any Snap by any particular person for any particular reason. You access, rely upon or use the Third Party Service at your own risk. Consensys disclaims all responsibility and liability for any losses on account of your use of Third Party Services. Any information you share with Third Party Services will be collected directly by those Third Party Services in accordance with their privacy policies. Please refer to their privacy policies for more information. Consensys has no access to information you share with Third Party Services."
+msgstr ""
+
+#: src/components/FooterAccountManagementTerms.tsx
+msgid "You will not be able to use your MetaMask Secret Recovery Phrase to recover accounts added through Account Management Snaps. If your account credentials are lost or compromised, MetaMask will not be able to help you. If the Snap or the associated dapp is hacked or ceases to function, you may not be able to access your account and the funds in your account."
 msgstr ""
