--- a/src/locales/zh-CN/messages.po
+++ b/src/locales/zh-CN/messages.po
@@ -196,6 +196,10 @@ msgstr ""
 msgid "Browse your installed Snaps on the MetaMask Snaps Directory."
 msgstr ""
 
+#: src/features/banner/components/create-snap-banner/CreateSnapBanner.tsx
+msgid "Build your own Snap"
+msgstr ""
+
 #: src/features/filter/Filter.tsx
 msgid "Categories"
 msgstr ""
@@ -244,10 +248,6 @@ msgstr ""
 
 #: src/constants.ts
 msgid "Create an Ethereum Account"
-msgstr ""
-
-#: src/features/banner/components/create-snap-banner/CreateSnapBanner.tsx
-msgid "Create your own Snap"
 msgstr ""
 
 #: src/features/snap/permissions.tsx
@@ -373,7 +373,7 @@ msgid "Flash"
 msgstr ""
 
 #: src/features/banner/components/faq-banner/FaqBanner.tsx
-msgid "Frequently Asked Questions"
+msgid "Frequently asked questions"
 msgstr ""
 
 #: src/components/FooterLinks.tsx
