--- a/src/locales/ja-JP/messages.po
+++ b/src/locales/ja-JP/messages.po
@@ -142,7 +142,7 @@ msgid "Allow {name} to use lifecycle hooks to run code at specific times during 
 msgstr ""
 
 #: src/features/snap/permissions.tsx
-msgid "Allow {name} to view your public keys (and addresses) for $1. This does not grant any control of accounts or assets."
+msgid "Allow {name} to view your public keys (and addresses) for the requested network. This does not grant any control of accounts or assets."
 msgstr ""
 
 #: src/features/snap/permissions.tsx
