--- a/src/locales/en-US/messages.po
+++ b/src/locales/en-US/messages.po
@@ -13,13 +13,21 @@ msgstr ""
 "Language-Team: \n"
 "Plural-Forms: \n"
 
+#: src/pages/snap/{Snap.location}/{Snap.slug}.tsx
+msgid "{0} on the MetaMask Snaps Directory"
+msgstr "{0} on the MetaMask Snaps Directory"
+
 #: src/components/PostInstallModal.tsx
 msgid "{name} is now ready to use."
 msgstr ""
 
 #: src/pages/{Category.name}/index.tsx
+msgid "{nameText} Snaps"
+msgstr "{nameText} Snaps"
+
+#: src/pages/{Category.name}/index.tsx
 msgid "{nameText} Snaps on the MetaMask Snaps Directory"
-msgstr ""
+msgstr "{nameText} Snaps on the MetaMask Snaps Directory"
 
 #: src/components/FooterCopyright.tsx
 msgid "©{0} MetaMask. All rights reserved."
@@ -250,6 +258,10 @@ msgstr ""
 msgid "Create an Ethereum Account"
 msgstr ""
 
+#: src/pages/snap/{Snap.location}/{Snap.slug}.tsx
+msgid "Customize your web3 experience with {0}."
+msgstr "Customize your web3 experience with {0}."
+
 #: src/features/snap/permissions.tsx
 msgid "Derive arbitrary keys unique to {name}"
 msgstr ""
@@ -331,6 +343,10 @@ msgstr ""
 msgid "Explore All Snaps"
 msgstr ""
 
+#: src/components/SEO.tsx
+msgid "Explore community-built Snaps to customize your web3 experience via our official directory."
+msgstr "Explore community-built Snaps to customize your web3 experience via our official directory."
+
 #: src/pages/explore.tsx
 msgid "Explore Snaps"
 msgstr ""
@@ -338,6 +354,10 @@ msgstr ""
 #: src/pages/latest.tsx
 msgid "Explore the latest community-built Snaps to customize your web3 experience."
 msgstr ""
+
+#: src/features/banner/components/explore-banner/ExploreBanner.tsx
+msgid "Explore, install, and use community-built features in MetaMask"
+msgstr "Explore, install, and use community-built features in MetaMask"
 
 #: src/components/Banner.tsx
 msgid "Explore, install, and use community-built features in MetaMask. <0>Learn more</0> and <1>FAQ</1>."
@@ -434,7 +454,7 @@ msgstr ""
 
 #: src/pages/{Category.name}/installed.tsx
 msgid "Installed {nameText} Snaps on the MetaMask Snaps Directory"
-msgstr ""
+msgstr "Installed {nameText} Snaps on the MetaMask Snaps Directory"
 
 #: src/pages/installed.tsx
 msgid "Installed Snaps"
@@ -442,7 +462,7 @@ msgstr ""
 
 #: src/pages/installed.tsx
 msgid "Installed Snaps on the MetaMask Snaps Directory"
-msgstr ""
+msgstr "Installed Snaps on the MetaMask Snaps Directory"
 
 #: src/components/InstallSnapButton.tsx
 msgid "Installing {name}"
@@ -476,7 +496,7 @@ msgstr ""
 
 #: src/pages/latest.tsx
 msgid "Latest Snaps on the MetaMask Snaps Directory"
-msgstr ""
+msgstr "Latest Snaps on the MetaMask Snaps Directory"
 
 #: src/features/snap/components/MetadataModal.tsx
 msgid "Legal"
@@ -572,6 +592,14 @@ msgstr ""
 #: src/features/notifications/components/NotificationsButton.tsx
 msgid "Open notifications menu"
 msgstr ""
+
+#: src/pages/404.tsx
+msgid "Page not found"
+msgstr "Page not found"
+
+#: src/pages/404.tsx
+msgid "Page not found on the MetaMask Snaps Directory"
+msgstr "Page not found on the MetaMask Snaps Directory"
 
 #: src/features/snap/components/Permissions.tsx
 msgid "Permissions by <0>{0}</0>"
@@ -701,6 +729,7 @@ msgstr ""
 msgid "Tag"
 msgstr ""
 
+#: src/components/FooterCopyright.tsx
 #: src/features/snap/components/Legal.tsx
 msgid "Terms of Use"
 msgstr ""
