--- a/src/locales/en-US/messages.po
+++ b/src/locales/en-US/messages.po
@@ -13,6 +13,10 @@ msgstr ""
 "Language-Team: \n"
 "Plural-Forms: \n"
 
+#: src/components/InstallationCount.tsx
+msgid "{0} installs"
+msgstr "{0} installs"
+
 #: src/pages/snap/{Snap.location}/{Snap.slug}.tsx
 msgid "{0} on the MetaMask Snaps Directory"
 msgstr "{0} on the MetaMask Snaps Directory"
@@ -32,6 +36,10 @@ msgstr "{nameText} Snaps on the MetaMask Snaps Directory"
 #: src/components/FooterCopyright.tsx
 msgid "©{0} MetaMask. All rights reserved."
 msgstr ""
+
+#: src/components/InstallationCount.tsx
+msgid "< 1K installs"
+msgstr "< 1K installs"
 
 #: src/features/snap/components/MetadataModal.tsx
 msgid "<0>{name}</0> uses code that isn't viewable by the public. Critical parts of the codebase were audited for security, but later versions of the code may not be. Make sure you trust <1>{0}</1> before installing and using <2>{name}</2>."
