--- a/src/locales/de-DE/messages.po
+++ b/src/locales/de-DE/messages.po
@@ -272,8 +272,8 @@ msgid "Continue to <0>{name}</0>'s website to get started with this snap."
 msgstr "Gehen Sie auf die Website von <0>{name}</0>, um mit diesem Snap zu beginnen."
 
 #: src/constants.ts
-msgid "Create an Ethereum Account"
-msgstr "Erstellen Sie ein Ethereum-Konto."
+msgid "Custom Ethereum Accounts"
+msgstr ""
 
 #: src/pages/snap/{Snap.location}/{Snap.slug}.tsx
 msgid "Customize your web3 experience with {0}."
@@ -594,8 +594,8 @@ msgid "Notifications"
 msgstr "Benachrichtigungen"
 
 #: src/constants.ts
-msgid "Notifications and Chat"
-msgstr "Benachrichtigungen und Chat"
+msgid "Notifications and Communication"
+msgstr ""
 
 #: src/components/SnapWebsiteButton.tsx
 #: src/features/banner/components/faq-banner/FaqBanner.tsx
