--- a/src/locales/ru-RU/messages.po
+++ b/src/locales/ru-RU/messages.po
@@ -272,8 +272,8 @@ msgid "Continue to <0>{name}</0>'s website to get started with this snap."
 msgstr "Перейдите на веб-сайт <0>{name}</0>, чтобы начать работу с этим Snap."
 
 #: src/constants.ts
-msgid "Create an Ethereum Account"
-msgstr "Создать счет Ethereum"
+msgid "Custom Ethereum Accounts"
+msgstr ""
 
 #: src/pages/snap/{Snap.location}/{Snap.slug}.tsx
 msgid "Customize your web3 experience with {0}."
@@ -594,8 +594,8 @@ msgid "Notifications"
 msgstr "Уведомления"
 
 #: src/constants.ts
-msgid "Notifications and Chat"
-msgstr "Уведомления и чат"
+msgid "Notifications and Communication"
+msgstr ""
 
 #: src/components/SnapWebsiteButton.tsx
 #: src/features/banner/components/faq-banner/FaqBanner.tsx
