--- a/src/locales/en-US/messages.po
+++ b/src/locales/en-US/messages.po
@@ -343,6 +343,10 @@ msgstr ""
 msgid "Ethereum"
 msgstr ""
 
+#: src/features/banner/components/explore-banner/ExploreBanner.tsx
+msgid "Everyone"
+msgstr "Everyone"
+
 #: src/components/FooterAccountManagementTerms.tsx
 msgid "Experimental Beta"
 msgstr ""
@@ -564,8 +568,8 @@ msgid "MetaMask"
 msgstr ""
 
 #: src/components/InstallUnsupportedMobile.tsx
-msgid "MetaMask Snaps is in open beta and only supported via our extension clients on desktop such as <0>Brave</0>, <1>Chrome</1>, or <2>Firefox</2>."
-msgstr ""
+msgid "MetaMask Snaps are currently only supported via our extension clients on desktop such as <0>Brave</0>, <1>Chrome</1>, or <2>Firefox</2>."
+msgstr "MetaMask Snaps are currently only supported via our extension clients on desktop such as <0>Brave</0>, <1>Chrome</1>, or <2>Firefox</2>."
 
 #: src/features/filter/constants.tsx
 #: src/pages/index.tsx
@@ -595,10 +599,6 @@ msgstr ""
 #: src/components/SnapWebsiteButton.tsx
 #: src/features/banner/components/faq-banner/FaqBanner.tsx
 msgid "Open"
-msgstr ""
-
-#: src/features/banner/components/explore-banner/ExploreBanner.tsx
-msgid "Open Beta Live"
 msgstr ""
 
 #: src/features/filter/components/FilterButton.tsx
