--- a/src/locales/de-DE/messages.po
+++ b/src/locales/de-DE/messages.po
@@ -573,7 +573,7 @@ msgid "MetaMask"
 msgstr "MetaMask"
 
 #: src/components/InstallUnsupportedMobile.tsx
-msgid "MetaMask Snaps are currently only supported via our extension clients on desktop such as <0>Brave</0>, <1>Chrome</1>, or <2>Firefox</2>."
+msgid "MetaMask Snaps is currently only supported via our extension clients on desktop such as <0>Brave</0>, <1>Chrome</1>, or <2>Firefox</2>."
 msgstr ""
 
 #: src/features/filter/constants.tsx
