--- a/src/locales/en-US/messages.po
+++ b/src/locales/en-US/messages.po
@@ -441,6 +441,10 @@ msgstr ""
 msgid "Home"
 msgstr ""
 
+#: src/constants.ts
+msgid "Human-readable Addresses Onchain"
+msgstr "Human-readable Addresses Onchain"
+
 #: src/features/snap/components/MetadataItems.tsx
 msgid "Identifier"
 msgstr ""
@@ -576,6 +580,10 @@ msgstr "MetaMask Snaps is currently only supported via our extension clients on 
 msgid "Most Popular"
 msgstr ""
 
+#: src/constants.ts
+msgid "Name Resolution"
+msgstr "Name Resolution"
+
 #: src/features/snaps/components/NoSnaps.tsx
 msgid "No Snaps found"
 msgstr ""
@@ -638,6 +646,10 @@ msgstr ""
 msgid "Related Snaps"
 msgstr ""
 
+#: src/constants.ts
+msgid "Resolve human-readable names to blockchain addresses."
+msgstr "Resolve human-readable names to blockchain addresses."
+
 #: src/pages/explore.tsx
 msgid "Results for \"{searchQuery}\""
 msgstr ""
@@ -676,6 +688,7 @@ msgstr ""
 msgid "See address, account balance, activity and suggest transactions to approve"
 msgstr ""
 
+#: src/constants.ts
 #: src/constants.ts
 #: src/constants.ts
 #: src/constants.ts
@@ -746,6 +759,7 @@ msgstr ""
 msgid "Support for WebAssembly"
 msgstr ""
 
+#: src/components/icons/index.ts
 #: src/components/icons/index.ts
 msgid "Tag"
 msgstr ""
