--- a/src/locales/pt-BR/messages.po
+++ b/src/locales/pt-BR/messages.po
@@ -337,6 +337,10 @@ msgid "Dropdown"
 msgstr "Suspenso"
 
 #: src/components/icons/index.ts
+msgid "Enable dark mode"
+msgstr "Ativar modo escuro"
+
+#: src/components/icons/index.ts
 msgid "Enable light mode"
 msgstr "Ativar modo claro"
 
@@ -598,7 +602,6 @@ msgid "Notification"
 msgstr "Notificação"
 
 #: src/components/icons/index.ts
-#: src/components/icons/index.ts
 msgid "Notifications"
 msgstr "Notificações"
 
@@ -665,7 +668,6 @@ msgstr "Agendar e executar ações periódicas"
 msgid "Screenshot for {name}"
 msgstr "Capturas de tela de {name}"
 
-#: src/components/icons/index.ts
 #: src/components/icons/index.ts
 msgid "Search"
 msgstr "Pesquisar"
@@ -789,7 +791,6 @@ msgid "To use MetaMask Snaps, you need the latest version (11.0) of MetaMask in 
 msgstr "Para usar o MetaMask Snaps, você precisa da versão mais recente (11.0) da MetaMask em seu navegador. <0>Saiba mais.</0>"
 
 #: src/components/ColorModeToggle.tsx
-#: src/components/icons/index.ts
 msgid "Toggle color mode"
 msgstr "Alternar modo colorido"
 
