--- a/src/locales/ru-RU/messages.po
+++ b/src/locales/ru-RU/messages.po
@@ -337,6 +337,10 @@ msgid "Dropdown"
 msgstr "Выпадающее меню"
 
 #: src/components/icons/index.ts
+msgid "Enable dark mode"
+msgstr "Включить темный режим"
+
+#: src/components/icons/index.ts
 msgid "Enable light mode"
 msgstr "Включить светлый режим"
 
@@ -598,7 +602,6 @@ msgid "Notification"
 msgstr "Уведомление"
 
 #: src/components/icons/index.ts
-#: src/components/icons/index.ts
 msgid "Notifications"
 msgstr "Уведомления"
 
@@ -665,7 +668,6 @@ msgstr "Планируйте и выполняйте периодические 
 msgid "Screenshot for {name}"
 msgstr "Скриншот для {name}"
 
-#: src/components/icons/index.ts
 #: src/components/icons/index.ts
 msgid "Search"
 msgstr "Поиск"
@@ -789,7 +791,6 @@ msgid "To use MetaMask Snaps, you need the latest version (11.0) of MetaMask in 
 msgstr "Для использования MetaMask Snaps вам нужна последняя версия MetaMask (11.0) в вашем браузере. <0>Подробнее.</0>"
 
 #: src/components/ColorModeToggle.tsx
-#: src/components/icons/index.ts
 msgid "Toggle color mode"
 msgstr "Сменить цветовой режим"
 
