--- a/src/locales/tr-TR/messages.po
+++ b/src/locales/tr-TR/messages.po
@@ -337,6 +337,10 @@ msgid "Dropdown"
 msgstr "Açılır Menü"
 
 #: src/components/icons/index.ts
+msgid "Enable dark mode"
+msgstr "Karanlık modu etkinleştir"
+
+#: src/components/icons/index.ts
 msgid "Enable light mode"
 msgstr "Aydınlık modu etkinleştir"
 
@@ -598,7 +602,6 @@ msgid "Notification"
 msgstr "Bildirim"
 
 #: src/components/icons/index.ts
-#: src/components/icons/index.ts
 msgid "Notifications"
 msgstr "Bildirimler"
 
@@ -665,7 +668,6 @@ msgstr "Periyodik eylemleri planla ve gerçekleştir"
 msgid "Screenshot for {name}"
 msgstr "{name} için ekran görüntüsü"
 
-#: src/components/icons/index.ts
 #: src/components/icons/index.ts
 msgid "Search"
 msgstr "Ara"
@@ -789,7 +791,6 @@ msgid "To use MetaMask Snaps, you need the latest version (11.0) of MetaMask in 
 msgstr "MetaMask Snaps'i kullanmak için tarayıcınızda en yeni MetaMask sürümüne (11.0) ihtiyacınız vardır. <0>Daha fazla bilgi alın.</0>"
 
 #: src/components/ColorModeToggle.tsx
-#: src/components/icons/index.ts
 msgid "Toggle color mode"
 msgstr "Renk modunu değiştir"
 
