--- a/src/locales/en-US/messages.po
+++ b/src/locales/en-US/messages.po
@@ -332,10 +332,6 @@ msgid "Dropdown"
 msgstr ""
 
 #: src/components/icons/index.ts
-msgid "Enable dark mode"
-msgstr ""
-
-#: src/components/icons/index.ts
 msgid "Enable light mode"
 msgstr ""
 
@@ -505,6 +501,10 @@ msgstr ""
 msgid "Knowledge Base"
 msgstr ""
 
+#: src/components/icons/index.ts
+msgid "Language"
+msgstr "Language"
+
 #: src/features/filter/constants.tsx
 #: src/pages/index.tsx
 msgid "Latest"
@@ -597,6 +597,7 @@ msgid "Notification"
 msgstr ""
 
 #: src/components/icons/index.ts
+#: src/components/icons/index.ts
 msgid "Notifications"
 msgstr ""
 
@@ -664,11 +665,8 @@ msgid "Screenshot for {name}"
 msgstr "Screenshot for {name}"
 
 #: src/components/icons/index.ts
-msgid "Search"
-msgstr ""
-
 #: src/features/filter/components/FilterSearchInput.tsx
-msgid "Search Snaps"
+msgid "Search"
 msgstr ""
 
 #: src/components/icons/index.ts
@@ -786,6 +784,7 @@ msgid "To use MetaMask Snaps, you need the latest version (11.0) of MetaMask in 
 msgstr ""
 
 #: src/components/ColorModeToggle.tsx
+#: src/components/icons/index.ts
 msgid "Toggle color mode"
 msgstr ""
 
