--- a/src/locales/pt-BR/messages.po
+++ b/src/locales/pt-BR/messages.po
@@ -675,7 +675,7 @@ msgstr "Pesquisar"
 
 #: src/features/filter/components/FilterSearchInput.tsx
 msgid "Search Snaps"
-msgstr ""
+msgstr "Pesquisar Snaps"
 
 #: src/components/icons/index.ts
 #: src/constants.ts
