Adjust colours and other small things for redesign (#527)
This does a few more minor changes for the redesign.

--- a/src/locales/en-US/messages.po
+++ b/src/locales/en-US/messages.po
@@ -501,6 +501,10 @@ msgstr ""
 msgid "Knowledge Base"
 msgstr ""
 
+#: src/components/icons/index.ts
+msgid "Language"
+msgstr "Language"
+
 #: src/features/filter/constants.tsx
 #: src/pages/index.tsx
 msgid "Latest"
