--- a/src/locales/pt-BR/messages.po
+++ b/src/locales/pt-BR/messages.po
@@ -67,12 +67,12 @@ msgid "Access the internet"
 msgstr "Acesso à internet"
 
 #: src/constants.ts
-msgid "Account Management"
-msgstr "Gerenciamento de contas"
+msgid "Account management"
+msgstr ""
 
 #: src/components/FooterAccountManagementTerms.tsx
-msgid "Account Management Snaps are released as part of an experimental beta release. You agree that you will only use one of these Snaps if you understand how it functions and how to use it, and you have fully read and understand all risk warnings and other disclosures made available by the Third Party Service provider relating to use of their Snap. You agree that Consensys is not responsible for any injury that you incur as a result of your use of this Snap."
-msgstr "Snaps de gerenciamento de contas são lançados como parte de uma versão beta experimental. Você concorda que só usará um desses Snaps se entende como ele funciona e como usá-lo. Você também confirma que leu e entendeu na íntegra todos os riscos e outras declarações disponibilizados pelo prestador do serviço terceirizado, relacionados ao uso do respectivo Snap. Você concorda que a Consensys não é responsável por nenhuma lesão em que você incorra como resultado do seu uso desse Snap."
+msgid "Account management Snaps are released as part of an experimental beta release. You agree that you will only use one of these Snaps if you understand how it functions and how to use it, and you have fully read and understand all risk warnings and other disclosures made available by the Third Party Service provider relating to use of their Snap. You agree that Consensys is not responsible for any injury that you incur as a result of your use of this Snap."
+msgstr ""
 
 #: src/components/icons/index.ts
 msgid "Add"
@@ -264,16 +264,16 @@ msgid "Contact"
 msgstr "Contato"
 
 #: src/components/FooterLinks.tsx
-msgid "Contact Us"
-msgstr "Fale conosco"
+msgid "Contact us"
+msgstr ""
 
 #: src/components/PostInstallModal.tsx
 msgid "Continue to <0>{name}</0>'s website to get started with this snap."
 msgstr "Prossiga para o site de <0>{name}</0> para começar com esse Snap."
 
 #: src/constants.ts
-msgid "Create an Ethereum Account"
-msgstr "Criar uma conta Ethereum"
+msgid "Create an Ethereum account"
+msgstr ""
 
 #: src/pages/snap/{Snap.location}/{Snap.slug}.tsx
 msgid "Customize your web3 experience with {0}."
@@ -296,8 +296,8 @@ msgid "Developer"
 msgstr "Desenvolvedor"
 
 #: src/components/FooterLinks.tsx
-msgid "Developer Docs"
-msgstr "Documentações para desenvolvedores"
+msgid "Developer docs"
+msgstr ""
 
 #: src/features/banner/components/create-snap-banner/CreateSnapBanner.tsx
 msgid "Developers"
@@ -345,16 +345,16 @@ msgid "Ethereum"
 msgstr "Ethereum"
 
 #: src/components/FooterAccountManagementTerms.tsx
-msgid "Experimental Beta"
-msgstr "Beta experimental"
+msgid "Experimental beta"
+msgstr ""
 
 #: src/components/icons/index.ts
 msgid "Explore"
 msgstr "Explorar"
 
 #: src/pages/index.tsx
-msgid "Explore All Snaps"
-msgstr "Explorar todos os Snaps"
+msgid "Explore all Snaps"
+msgstr ""
 
 #: src/components/SEO.tsx
 msgid "Explore community-built Snaps to customize your web3 experience via our official directory."
@@ -427,8 +427,8 @@ msgid "Got it"
 msgstr "Entendi"
 
 #: src/constants.ts
-msgid "Guard Your Wallet"
-msgstr "Proteja sua carteira"
+msgid "Guard your wallet"
+msgstr ""
 
 #: src/constants.ts
 msgid "Guard your wallet with transaction insights and safety tools."
@@ -443,8 +443,8 @@ msgid "Home"
 msgstr "Início"
 
 #: src/constants.ts
-msgid "Human-readable Addresses Onchain"
-msgstr "Endereços legíveis por humanos na blockchain"
+msgid "Human-readable addresses onchain"
+msgstr ""
 
 #: src/features/snap/components/MetadataItems.tsx
 msgid "Identifier"
@@ -499,12 +499,12 @@ msgid "Key"
 msgstr "Chave"
 
 #: src/features/snap/components/Metadata.tsx
-msgid "Key Recovery"
-msgstr "Recuperação de chave"
+msgid "Key recovery"
+msgstr ""
 
 #: src/features/snap/components/Metadata.tsx
-msgid "Knowledge Base"
-msgstr "Base de conhecimento"
+msgid "Knowledge base"
+msgstr ""
 
 #: src/components/icons/index.ts
 msgid "Language"
@@ -582,12 +582,12 @@ msgstr "No momento, o MetaMask Snaps só é compatível com nossos clientes de e
 
 #: src/features/filter/constants.tsx
 #: src/pages/index.tsx
-msgid "Most Popular"
-msgstr "Mais populares"
+msgid "Most popular"
+msgstr ""
 
 #: src/constants.ts
-msgid "Name Resolution"
-msgstr "Resolução de nomes"
+msgid "Name resolution"
+msgstr ""
 
 #: src/features/snaps/components/NoSnaps.tsx
 msgid "No Snaps found"
@@ -607,8 +607,8 @@ msgid "Notifications"
 msgstr "Notificações"
 
 #: src/constants.ts
-msgid "Notifications and Chat"
-msgstr "Notificações e chat"
+msgid "Notifications and chat"
+msgstr ""
 
 #: src/components/SnapWebsiteButton.tsx
 #: src/features/banner/components/faq-banner/FaqBanner.tsx
@@ -637,8 +637,8 @@ msgstr "Permissões por <0>{0}</0>"
 
 #: src/components/FooterCopyright.tsx
 #: src/features/snap/components/Legal.tsx
-msgid "Privacy Policy"
-msgstr "Política de Privacidade"
+msgid "Privacy policy"
+msgstr ""
 
 #: src/features/snap/permissions.tsx
 msgid "Provide domain and address lookups"
@@ -701,24 +701,24 @@ msgstr "Ver endereço, saldo de conta, atividade e sugerir transações para apr
 #: src/constants.ts
 #: src/constants.ts
 #: src/pages/explore.tsx
-msgid "See All"
-msgstr "Ver tudo"
+msgid "See all"
+msgstr ""
 
 #: src/features/filter/components/FilterSearch.tsx
 msgid "See all results"
 msgstr "Ver todos os resultados"
 
 #: src/features/snap/components/Metadata.tsx
-msgid "See Details"
-msgstr "Ver detalhes"
+msgid "See details"
+msgstr ""
 
 #: src/features/snaps/components/NoSnaps.tsx
 msgid "See everything"
 msgstr "Ver tudo"
 
 #: src/pages/index.tsx
-msgid "See Latest"
-msgstr "Ver mais recentes"
+msgid "See latest"
+msgstr ""
 
 #: src/features/snap/permissions.tsx
 msgid "See the origins of websites that suggest transactions"
@@ -737,8 +737,8 @@ msgid "Sort"
 msgstr "Classificar"
 
 #: src/features/snap/components/MetadataModal.tsx
-msgid "Source Code"
-msgstr "Código-fonte"
+msgid "Source code"
+msgstr ""
 
 #: src/components/icons/index.ts
 msgid "Speedometer"
@@ -773,8 +773,8 @@ msgstr "Tag"
 
 #: src/components/FooterCopyright.tsx
 #: src/features/snap/components/Legal.tsx
-msgid "Terms of Use"
-msgstr "Termos de Uso"
+msgid "Terms of use"
+msgstr ""
 
 #: src/pages/404.tsx
 msgid "The page you're looking for can't be found."
@@ -822,8 +822,8 @@ msgid "Use lifecycle hooks"
 msgstr "Usar ganchos de ciclo de vida"
 
 #: src/constants.ts
-msgid "Use MetaMask Beyond Ethereum"
-msgstr "Use a MetaMask para além do Ethereum"
+msgid "Use MetaMask beyond Ethereum"
+msgstr ""
 
 #: src/features/snap/components/MetadataModal.tsx
 msgid "Version"
@@ -862,8 +862,8 @@ msgid "Wifi"
 msgstr "WiFi"
 
 #: src/components/FooterTerms.tsx
-msgid "You acknowledge that any Snap that you install is a Third Party Service, unless otherwise identified, as defined in the <0>Consensys Terms of Use</0>. Your use of Third Party Services is governed by separate terms and conditions set forth by the Third Party Service provider. Consensys does not recommend the use of any Snap by any particular person for any particular reason. You access, rely upon or use the Third Party Service at your own risk. Consensys disclaims all responsibility and liability for any losses on account of your use of Third Party Services. Any information you share with Third Party Services will be collected directly by those Third Party Services in accordance with their privacy policies. Please refer to their privacy policies for more information. Consensys has no access to information you share with Third Party Services."
-msgstr "Você reconhece que qualquer Snap instalado é um Serviço Terceirizado, a menos que identificado de outra forma, conforme definido nos <0>Termos de Uso da Consensys</0>. Seu uso dos Serviços Terceirizados é regido por termos e condições separados, estabelecidos pelo prestador do Serviço Terceirizado. A Consensys não faz recomendação de uso de nenhum Snap a nenhuma pessoa específica por qualquer motivo específico. Você acessa, confia ou usa o Serviço Terceirizado por sua conta e risco. A Consensys se isenta de toda e qualquer responsabilidade e obrigação por perdas relacionadas ao seu uso dos Serviços Terceirizados. Qualquer informação que você compartilhar com os Serviços Terceirizados será coletada diretamente pelos respectivos Serviços Terceirizados, de acordo com as políticas de privacidade pertinentes. Consulte mais informações nas respectivas políticas de privacidade. A Consensys não tem acesso às informações que você compartilha com Serviços Terceirizados."
+msgid "You acknowledge that any Snap that you install is a Third Party Service, unless otherwise identified, as defined in the <0>Consensys terms of use</0>. Your use of Third Party Services is governed by separate terms and conditions set forth by the Third Party Service provider. Consensys does not recommend the use of any Snap by any particular person for any particular reason. You access, rely upon or use the Third Party Service at your own risk. Consensys disclaims all responsibility and liability for any losses on account of your use of Third Party Services. Any information you share with Third Party Services will be collected directly by those Third Party Services in accordance with their privacy policies. Please refer to their privacy policies for more information. Consensys has no access to information you share with Third Party Services."
+msgstr ""
 
 #: src/components/FooterAccountManagementTerms.tsx
 msgid "You will not be able to use your MetaMask Secret Recovery Phrase to recover accounts added through Account Management Snaps. If your account credentials are lost or compromised, MetaMask will not be able to help you. If the Snap or the associated dapp is hacked or ceases to function, you may not be able to access your account and the funds in your account."
