--- a/src/locales/ru-RU/messages.po
+++ b/src/locales/ru-RU/messages.po
@@ -67,12 +67,12 @@ msgid "Access the internet"
 msgstr "Войдите в Интернет"
 
 #: src/constants.ts
-msgid "Account Management"
-msgstr "«Управление счетами» (Account Management)"
+msgid "Account management"
+msgstr ""
 
 #: src/components/FooterAccountManagementTerms.tsx
-msgid "Account Management Snaps are released as part of an experimental beta release. You agree that you will only use one of these Snaps if you understand how it functions and how to use it, and you have fully read and understand all risk warnings and other disclosures made available by the Third Party Service provider relating to use of their Snap. You agree that Consensys is not responsible for any injury that you incur as a result of your use of this Snap."
-msgstr "Snaps под названием «Управление счетами» (Account Management) выпущены в рамках экспериментальной бета-версии. Вы соглашаетесь с тем, что будете использовать один из этих Snap только в том случае, если вы понимаете, как он функционирует и как его использовать. Вы также подтверждаете, что полностью прочитали и поняли все предупреждения о рисках и другие заявления о раскрытии информации, предоставленные Сторонним поставщиком услуг в отношении использования его Snap. Вы соглашаетесь с тем, что Consensys не несет ответственности за любой ущерб, которые вы понесете в результате использования вами этого Snap."
+msgid "Account management Snaps are released as part of an experimental beta release. You agree that you will only use one of these Snaps if you understand how it functions and how to use it, and you have fully read and understand all risk warnings and other disclosures made available by the Third Party Service provider relating to use of their Snap. You agree that Consensys is not responsible for any injury that you incur as a result of your use of this Snap."
+msgstr ""
 
 #: src/components/icons/index.ts
 msgid "Add"
@@ -264,16 +264,16 @@ msgid "Contact"
 msgstr "Контакты"
 
 #: src/components/FooterLinks.tsx
-msgid "Contact Us"
-msgstr "Связаться с нами"
+msgid "Contact us"
+msgstr ""
 
 #: src/components/PostInstallModal.tsx
 msgid "Continue to <0>{name}</0>'s website to get started with this snap."
 msgstr "Перейдите на веб-сайт <0>{name}</0>, чтобы начать работу с этим Snap."
 
 #: src/constants.ts
-msgid "Create an Ethereum Account"
-msgstr "Создать счет Ethereum"
+msgid "Create an Ethereum account"
+msgstr ""
 
 #: src/pages/snap/{Snap.location}/{Snap.slug}.tsx
 msgid "Customize your web3 experience with {0}."
@@ -296,8 +296,8 @@ msgid "Developer"
 msgstr "Разработчик"
 
 #: src/components/FooterLinks.tsx
-msgid "Developer Docs"
-msgstr "Документы разработчика"
+msgid "Developer docs"
+msgstr ""
 
 #: src/features/banner/components/create-snap-banner/CreateSnapBanner.tsx
 msgid "Developers"
@@ -345,16 +345,16 @@ msgid "Ethereum"
 msgstr "Ethereum"
 
 #: src/components/FooterAccountManagementTerms.tsx
-msgid "Experimental Beta"
-msgstr "Экспериментальная бета-версия"
+msgid "Experimental beta"
+msgstr ""
 
 #: src/components/icons/index.ts
 msgid "Explore"
 msgstr "Обзор"
 
 #: src/pages/index.tsx
-msgid "Explore All Snaps"
-msgstr "Обзор всех Snaps"
+msgid "Explore all Snaps"
+msgstr ""
 
 #: src/components/SEO.tsx
 msgid "Explore community-built Snaps to customize your web3 experience via our official directory."
@@ -427,8 +427,8 @@ msgid "Got it"
 msgstr "Понятно"
 
 #: src/constants.ts
-msgid "Guard Your Wallet"
-msgstr "Защитите свой кошелек"
+msgid "Guard your wallet"
+msgstr ""
 
 #: src/constants.ts
 msgid "Guard your wallet with transaction insights and safety tools."
@@ -443,8 +443,8 @@ msgid "Home"
 msgstr "Главная"
 
 #: src/constants.ts
-msgid "Human-readable Addresses Onchain"
-msgstr "Адреса в блокчейне, удобные для чтения человеком"
+msgid "Human-readable addresses onchain"
+msgstr ""
 
 #: src/features/snap/components/MetadataItems.tsx
 msgid "Identifier"
@@ -499,12 +499,12 @@ msgid "Key"
 msgstr "Ключ"
 
 #: src/features/snap/components/Metadata.tsx
-msgid "Key Recovery"
-msgstr "Восстановление ключа"
+msgid "Key recovery"
+msgstr ""
 
 #: src/features/snap/components/Metadata.tsx
-msgid "Knowledge Base"
-msgstr "База знаний"
+msgid "Knowledge base"
+msgstr ""
 
 #: src/components/icons/index.ts
 msgid "Language"
@@ -582,12 +582,12 @@ msgstr "MetaMask Snaps сейчас поддерживается только ч
 
 #: src/features/filter/constants.tsx
 #: src/pages/index.tsx
-msgid "Most Popular"
-msgstr "Самые популярные"
+msgid "Most popular"
+msgstr ""
 
 #: src/constants.ts
-msgid "Name Resolution"
-msgstr "Разрешение имени"
+msgid "Name resolution"
+msgstr ""
 
 #: src/features/snaps/components/NoSnaps.tsx
 msgid "No Snaps found"
@@ -607,8 +607,8 @@ msgid "Notifications"
 msgstr "Уведомления"
 
 #: src/constants.ts
-msgid "Notifications and Chat"
-msgstr "Уведомления и чат"
+msgid "Notifications and chat"
+msgstr ""
 
 #: src/components/SnapWebsiteButton.tsx
 #: src/features/banner/components/faq-banner/FaqBanner.tsx
@@ -637,8 +637,8 @@ msgstr "Разрешения предоставлены <0>{0}</0>"
 
 #: src/components/FooterCopyright.tsx
 #: src/features/snap/components/Legal.tsx
-msgid "Privacy Policy"
-msgstr "Политика конфиденциальности"
+msgid "Privacy policy"
+msgstr ""
 
 #: src/features/snap/permissions.tsx
 msgid "Provide domain and address lookups"
@@ -701,24 +701,24 @@ msgstr "Просматривайте адрес, баланс счета, акт
 #: src/constants.ts
 #: src/constants.ts
 #: src/pages/explore.tsx
-msgid "See All"
-msgstr "Смотреть все"
+msgid "See all"
+msgstr ""
 
 #: src/features/filter/components/FilterSearch.tsx
 msgid "See all results"
 msgstr "Смотреть все результаты"
 
 #: src/features/snap/components/Metadata.tsx
-msgid "See Details"
-msgstr "Смотреть подробности"
+msgid "See details"
+msgstr ""
 
 #: src/features/snaps/components/NoSnaps.tsx
 msgid "See everything"
 msgstr "Смотреть все"
 
 #: src/pages/index.tsx
-msgid "See Latest"
-msgstr "Смотреть новейшие"
+msgid "See latest"
+msgstr ""
 
 #: src/features/snap/permissions.tsx
 msgid "See the origins of websites that suggest transactions"
@@ -737,8 +737,8 @@ msgid "Sort"
 msgstr "Сортировать"
 
 #: src/features/snap/components/MetadataModal.tsx
-msgid "Source Code"
-msgstr "Исходный код"
+msgid "Source code"
+msgstr ""
 
 #: src/components/icons/index.ts
 msgid "Speedometer"
@@ -773,8 +773,8 @@ msgstr "Тег"
 
 #: src/components/FooterCopyright.tsx
 #: src/features/snap/components/Legal.tsx
-msgid "Terms of Use"
-msgstr "Условия использования"
+msgid "Terms of use"
+msgstr ""
 
 #: src/pages/404.tsx
 msgid "The page you're looking for can't be found."
@@ -822,8 +822,8 @@ msgid "Use lifecycle hooks"
 msgstr "Использовать хуки жизненного цикла"
 
 #: src/constants.ts
-msgid "Use MetaMask Beyond Ethereum"
-msgstr "Использовать MetaMask за пределами Ethereum"
+msgid "Use MetaMask beyond Ethereum"
+msgstr ""
 
 #: src/features/snap/components/MetadataModal.tsx
 msgid "Version"
@@ -862,8 +862,8 @@ msgid "Wifi"
 msgstr "Wi-Fi"
 
 #: src/components/FooterTerms.tsx
-msgid "You acknowledge that any Snap that you install is a Third Party Service, unless otherwise identified, as defined in the <0>Consensys Terms of Use</0>. Your use of Third Party Services is governed by separate terms and conditions set forth by the Third Party Service provider. Consensys does not recommend the use of any Snap by any particular person for any particular reason. You access, rely upon or use the Third Party Service at your own risk. Consensys disclaims all responsibility and liability for any losses on account of your use of Third Party Services. Any information you share with Third Party Services will be collected directly by those Third Party Services in accordance with their privacy policies. Please refer to their privacy policies for more information. Consensys has no access to information you share with Third Party Services."
-msgstr "Вы признаете, что любой Snap, который вы устанавливаете, является Сторонней службой, если не указано иное, как она определена в <0>Условиях использования Consensys</0>. Использование вами Сторонних служб регулируется отдельными положениями и условиями, изложенными Сторонним поставщиком услуг. Consensys не рекомендует использовать Snap каким-либо конкретному лицу по какой-либо конкретной причине. Вы получаете доступ к Сторонней службе, полагаетесь на нее или используете ее на свой страх и риск. Consensys отказывается от любой материальной и иной ответственности за любые убытки, связанные с использованием вами Сторонних служб. Любая информация, которой вы делитесь со Сторонними службами, будет собираться непосредственно этими Сторонними службами в соответствии с их политикой конфиденциальности. Обратитесь к их политике конфиденциальности для получения дополнительной информации. У Consensys нет доступа к информации, которую вы передаете Сторонним службам."
+msgid "You acknowledge that any Snap that you install is a Third Party Service, unless otherwise identified, as defined in the <0>Consensys terms of use</0>. Your use of Third Party Services is governed by separate terms and conditions set forth by the Third Party Service provider. Consensys does not recommend the use of any Snap by any particular person for any particular reason. You access, rely upon or use the Third Party Service at your own risk. Consensys disclaims all responsibility and liability for any losses on account of your use of Third Party Services. Any information you share with Third Party Services will be collected directly by those Third Party Services in accordance with their privacy policies. Please refer to their privacy policies for more information. Consensys has no access to information you share with Third Party Services."
+msgstr ""
 
 #: src/components/FooterAccountManagementTerms.tsx
 msgid "You will not be able to use your MetaMask Secret Recovery Phrase to recover accounts added through Account Management Snaps. If your account credentials are lost or compromised, MetaMask will not be able to help you. If the Snap or the associated dapp is hacked or ceases to function, you may not be able to access your account and the funds in your account."
